--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,8 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql
+  database: balance_sheet_production
+  username: balance_sheet
+  password: 8cAiq89475jasdl2T
+  host: localhost
